[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/BlockChainDestroyer/ChainDestroyController.gd" type="Script" id=1]

[node name="ChainDestroyController" type="Node"]
script = ExtResource( 1 )

[node name="DestoryDelayTimer" type="Timer" parent="."]

[connection signal="timeout" from="DestoryDelayTimer" to="." method="_on_DestoryDelayTimer_timeout"]
